# kebab-lang

./: .gitignore  README.md  pyproject.toml
examples/: fizzbuzz.kb  functions.kb  hello.kb  random.kb
kebab/: __init__.py  __main__.py  ast_nodes.py  cli.py  environment.py  interpreter.py  lexer.py  parser.py  tokens.py
tests/: __init__.py  test_interpreter.py  test_lexer.py  test_parser.py
