[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kebab-lang"
version = "0.1.0"
description = "A fun, skewered programming language"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["language", "interpreter", "kebab", "esolang"]

[project.scripts]
kebab = "kebab.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kebab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
